[project]
name = "rlm-sandbox"
version = "0.1.0"
description = "RLM-style agent with isolated E2B sandbox execution"
requires-python = ">=3.12"
dependencies = [
    "e2b>=2.19.0",
    "e2b-code-interpreter>=2.6.0",
    "ipykernel>=7.2.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

